[metadata]
#version = 0.0.0
name = tqdm-thread

url = https://github.com/riklopfer/tqdm-thread

description = TQDM context manager thread
long_description = file: README.md
long_description_content_type = text/markdown

author = Russell Klopfer
author_email = russell.klopfer@gmail.com
license = MIT License

[options]
packages = find:
install_requires =
    tqdm; python_version >= "3.5"
